// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`client/messaging/common-message-layout/TextMessage message as a normal text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="message-layout__MessageContainer-sc-5nek6h-3 hIebOr"
    role="document"
  >
    <div
      class="tooltip__TooltipChildrenContainer-sc-qaqusi-0 jbMUUW message-layout__StyledTooltip-sc-5nek6h-1 iBtnYe"
      tabindex="0"
    >
      <span
        class="message-layout__Timestamp-sc-5nek6h-2 kFCVCa"
      >
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 ddXYvO"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 ddXYvO"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="common-message-layout__Username-sc-hg9wkq-0 iMhLkv"
    >
      <span
        class="connected-username__Username-sc-1uo72rz-0 bpkcAR"
      >
        <span
          aria-label="Username loading…"
          class="connected-username__LoadingName-sc-1uo72rz-1 cxBYFX"
        >
                     
        </span>
      </span>
    </span>
    <i
      aria-hidden="true"
      class="message-layout__Separator-sc-5nek6h-0 ddXYvO"
    >
      : 
    </i>
    <span
      class="common-message-layout__Text-sc-hg9wkq-1 iKzPqO"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage message with a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="message-layout__MessageContainer-sc-5nek6h-3 hIebOr"
    role="document"
  >
    <div
      class="tooltip__TooltipChildrenContainer-sc-qaqusi-0 jbMUUW message-layout__StyledTooltip-sc-5nek6h-1 iBtnYe"
      tabindex="0"
    >
      <span
        class="message-layout__Timestamp-sc-5nek6h-2 kFCVCa"
      >
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 ddXYvO"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 ddXYvO"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="common-message-layout__Username-sc-hg9wkq-0 iMhLkv"
    >
      <span
        class="connected-username__Username-sc-1uo72rz-0 bpkcAR"
      >
        <span
          aria-label="Username loading…"
          class="connected-username__LoadingName-sc-1uo72rz-1 cxBYFX"
        >
                     
        </span>
      </span>
    </span>
    <i
      aria-hidden="true"
      class="message-layout__Separator-sc-5nek6h-0 ddXYvO"
    >
      : 
    </i>
    <span
      class="common-message-layout__Text-sc-hg9wkq-1 iKzPqO"
    >
      here is a link 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage message with a link before a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="message-layout__MessageContainer-sc-5nek6h-3 hIebOr"
    role="document"
  >
    <div
      class="tooltip__TooltipChildrenContainer-sc-qaqusi-0 jbMUUW message-layout__StyledTooltip-sc-5nek6h-1 iBtnYe"
      tabindex="0"
    >
      <span
        class="message-layout__Timestamp-sc-5nek6h-2 kFCVCa"
      >
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 ddXYvO"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 ddXYvO"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="common-message-layout__Username-sc-hg9wkq-0 iMhLkv"
    >
      <span
        class="connected-username__Username-sc-1uo72rz-0 bpkcAR"
      >
        <span
          aria-label="Username loading…"
          class="connected-username__LoadingName-sc-1uo72rz-1 cxBYFX"
        >
                     
        </span>
      </span>
    </span>
    <i
      aria-hidden="true"
      class="message-layout__Separator-sc-5nek6h-0 ddXYvO"
    >
      : 
    </i>
    <span
      class="common-message-layout__Text-sc-hg9wkq-1 iKzPqO"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="connected-username__Username-sc-1uo72rz-0 bpkcAR common-message-layout__MentionedUsername-sc-hg9wkq-2 fQLhjO"
      >
        @
        <span
          aria-label="Username loading…"
          class="connected-username__LoadingName-sc-1uo72rz-1 cxBYFX"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage message with a link between mentions 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="message-layout__MessageContainer-sc-5nek6h-3 hIebOr"
    role="document"
  >
    <div
      class="tooltip__TooltipChildrenContainer-sc-qaqusi-0 jbMUUW message-layout__StyledTooltip-sc-5nek6h-1 iBtnYe"
      tabindex="0"
    >
      <span
        class="message-layout__Timestamp-sc-5nek6h-2 kFCVCa"
      >
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 ddXYvO"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 ddXYvO"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="common-message-layout__Username-sc-hg9wkq-0 iMhLkv"
    >
      <span
        class="connected-username__Username-sc-1uo72rz-0 bpkcAR"
      >
        <span
          aria-label="Username loading…"
          class="connected-username__LoadingName-sc-1uo72rz-1 cxBYFX"
        >
                     
        </span>
      </span>
    </span>
    <i
      aria-hidden="true"
      class="message-layout__Separator-sc-5nek6h-0 ddXYvO"
    >
      : 
    </i>
    <span
      class="common-message-layout__Text-sc-hg9wkq-1 iKzPqO"
    >
      hey
       
      <span
        class="connected-username__Username-sc-1uo72rz-0 bpkcAR common-message-layout__MentionedUsername-sc-hg9wkq-2 fQLhjO"
      >
        @
        <span
          aria-label="Username loading…"
          class="connected-username__LoadingName-sc-1uo72rz-1 cxBYFX"
        >
                     
        </span>
      </span>
       see 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="connected-username__Username-sc-1uo72rz-0 bpkcAR common-message-layout__MentionedUsername-sc-hg9wkq-2 fQLhjO"
      >
        @
        <span
          aria-label="Username loading…"
          class="connected-username__LoadingName-sc-1uo72rz-1 cxBYFX"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage message with a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="message-layout__MessageContainer-sc-5nek6h-3 hIebOr"
    role="document"
  >
    <div
      class="tooltip__TooltipChildrenContainer-sc-qaqusi-0 jbMUUW message-layout__StyledTooltip-sc-5nek6h-1 iBtnYe"
      tabindex="0"
    >
      <span
        class="message-layout__Timestamp-sc-5nek6h-2 kFCVCa"
      >
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 ddXYvO"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 ddXYvO"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="common-message-layout__Username-sc-hg9wkq-0 iMhLkv"
    >
      <span
        class="connected-username__Username-sc-1uo72rz-0 bpkcAR"
      >
        <span
          aria-label="Username loading…"
          class="connected-username__LoadingName-sc-1uo72rz-1 cxBYFX"
        >
                     
        </span>
      </span>
    </span>
    <i
      aria-hidden="true"
      class="message-layout__Separator-sc-5nek6h-0 ddXYvO"
    >
      : 
    </i>
    <span
      class="common-message-layout__Text-sc-hg9wkq-1 iKzPqO"
    >
      hey
       
      <span
        class="connected-username__Username-sc-1uo72rz-0 bpkcAR common-message-layout__MentionedUsername-sc-hg9wkq-2 fQLhjO"
      >
        @
        <span
          aria-label="Username loading…"
          class="connected-username__LoadingName-sc-1uo72rz-1 cxBYFX"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage message with a mention before a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="message-layout__MessageContainer-sc-5nek6h-3 hIebOr"
    role="document"
  >
    <div
      class="tooltip__TooltipChildrenContainer-sc-qaqusi-0 jbMUUW message-layout__StyledTooltip-sc-5nek6h-1 iBtnYe"
      tabindex="0"
    >
      <span
        class="message-layout__Timestamp-sc-5nek6h-2 kFCVCa"
      >
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 ddXYvO"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 ddXYvO"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="common-message-layout__Username-sc-hg9wkq-0 iMhLkv"
    >
      <span
        class="connected-username__Username-sc-1uo72rz-0 bpkcAR"
      >
        <span
          aria-label="Username loading…"
          class="connected-username__LoadingName-sc-1uo72rz-1 cxBYFX"
        >
                     
        </span>
      </span>
    </span>
    <i
      aria-hidden="true"
      class="message-layout__Separator-sc-5nek6h-0 ddXYvO"
    >
      : 
    </i>
    <span
      class="common-message-layout__Text-sc-hg9wkq-1 iKzPqO"
    >
      <span
        class="connected-username__Username-sc-1uo72rz-0 bpkcAR common-message-layout__MentionedUsername-sc-hg9wkq-2 fQLhjO"
      >
        @
        <span
          aria-label="Username loading…"
          class="connected-username__LoadingName-sc-1uo72rz-1 cxBYFX"
        >
                     
        </span>
      </span>
       go to 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage message with a mention between links 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="message-layout__MessageContainer-sc-5nek6h-3 hIebOr"
    role="document"
  >
    <div
      class="tooltip__TooltipChildrenContainer-sc-qaqusi-0 jbMUUW message-layout__StyledTooltip-sc-5nek6h-1 iBtnYe"
      tabindex="0"
    >
      <span
        class="message-layout__Timestamp-sc-5nek6h-2 kFCVCa"
      >
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 ddXYvO"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 ddXYvO"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="common-message-layout__Username-sc-hg9wkq-0 iMhLkv"
    >
      <span
        class="connected-username__Username-sc-1uo72rz-0 bpkcAR"
      >
        <span
          aria-label="Username loading…"
          class="connected-username__LoadingName-sc-1uo72rz-1 cxBYFX"
        >
                     
        </span>
      </span>
    </span>
    <i
      aria-hidden="true"
      class="message-layout__Separator-sc-5nek6h-0 ddXYvO"
    >
      : 
    </i>
    <span
      class="common-message-layout__Text-sc-hg9wkq-1 iKzPqO"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="connected-username__Username-sc-1uo72rz-0 bpkcAR common-message-layout__MentionedUsername-sc-hg9wkq-2 fQLhjO"
      >
        @
        <span
          aria-label="Username loading…"
          class="connected-username__LoadingName-sc-1uo72rz-1 cxBYFX"
        >
                     
        </span>
      </span>
       or here 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage message with a mention of self user 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="message-layout__MessageContainer-sc-5nek6h-3 kdbbZg"
    role="document"
  >
    <div
      class="tooltip__TooltipChildrenContainer-sc-qaqusi-0 jbMUUW message-layout__StyledTooltip-sc-5nek6h-1 iBtnYe"
      tabindex="0"
    >
      <span
        class="message-layout__Timestamp-sc-5nek6h-2 kFCVCa"
      >
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 ddXYvO"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 ddXYvO"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="common-message-layout__Username-sc-hg9wkq-0 iMhLkv"
    >
      <span
        class="connected-username__Username-sc-1uo72rz-0 bpkcAR"
      >
        <span
          aria-label="Username loading…"
          class="connected-username__LoadingName-sc-1uo72rz-1 cxBYFX"
        >
                     
        </span>
      </span>
    </span>
    <i
      aria-hidden="true"
      class="message-layout__Separator-sc-5nek6h-0 ddXYvO"
    >
      : 
    </i>
    <span
      class="common-message-layout__Text-sc-hg9wkq-1 iKzPqO"
    >
      Hey
       
      <span
        class="connected-username__Username-sc-1uo72rz-0 bpkcAR common-message-layout__MentionedUsername-sc-hg9wkq-2 fQLhjO"
      >
        @
        <span
          aria-label="Username loading…"
          class="connected-username__LoadingName-sc-1uo72rz-1 cxBYFX"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;
